[pcd] add install & uninstall commands

--- a/PCD/CMakeLists.txt
+++ b/PCD/CMakeLists.txt
@@ -13,3 +13,15 @@ add_executable(pcd_viewer pcd_viewer.cpp)
 target_link_libraries(save_pcd_ascii ${PCL_LIBRARIES})
 target_link_libraries(save_pcd_binary ${PCL_LIBRARIES})
 target_link_libraries(pcd_viewer ${PCL_LIBRARIES} ${VTK_LIBRARIES})
+
+install(TARGETS pcd_viewer RUNTIME DESTINATION bin)
+
+configure_file(
+    "${CMAKE_CURRENT_SOURCE_DIR}/cmake/cmake_uninstall.cmake.in"
+    "${CMAKE_CURRENT_BINARY_DIR}/cmake_uninstall.cmake"
+    IMMEDIATE @ONLY
+)
+
+add_custom_target(uninstall
+    COMMAND ${CMAKE_COMMAND} -P ${CMAKE_CURRENT_BINARY_DIR}/cmake_uninstall.cmake
+)
